--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
 	<body>
         <header>
             <h1>Visionrey</h1>
-            <img src="logo.jpg" alt="Visionrey Logo"> 
+            <figure class = "logo">
+                <img src="images/logo.webp" alt="Visionrey Logo"> 
+            </figure>
         <nav>
             <ul>
-            <li>ACTORS</li>
-            <li>PRODUCTION</li>
-            <li>PHOTOS</li>
-            <li>BRANDING</li>
-            <li>WEDDINGS</li>
+            <li><a href="#">ACTORS</a></li>
+            <li><a href="#">PRODUCTION</a></li>
+            <li><a href="#">PHOTOS</a></li>
+            <li><a href="#">BRANDING</a></li>
+            <li><a href="#">WEDDINGS</a></li>
             </ul>
         </nav>
         </header>
@@ -31,15 +33,15 @@
         <section>
             <nav>
                 <ul>
-                <li>ACTORS</li>
+                <li><a href="#">ACTORS</a></li>
                 <img src="hero_actors.jpg" alt=""> 
-                <li>PRODUCTION</li>
+                <li><a href="#">PRODUCTION</a></li>
                 <img src="hero_prod.jpg" alt=""> 
-                <li>PHOTOS</li>
+                <li><a href="#">PHOTOS</a></li>
                 <img src="hero_photos.jpg" alt=""> 
-                <li>BRANDING</li>
+                <li><a href="#">BRANDING</a></li>
                 <img src="hero_brand.jpg" alt=""> 
-                <li>WEDDINGS</li>
+                <li><a href="#">WEDDINGS</a></li>
                 <img src="hero_wedding.jpg" alt=""> 
                 </ul>
             </nav>
@@ -150,7 +152,7 @@
                 <li>Actors</li>
                 <li>Production</li>
                 <li>Photos</li>
-                <li>Vidoes</li>
+                <li>Videos</li>
                 <li>Branding</li>
                 <li>Weddings</li>
                 <li>Consultations</li>
