--- a/index.html
+++ b/index.html
@@ -29,23 +29,38 @@
         </header>
 
         <main>
-        
-        <section>
-            <nav>
+
+            <section class="hero">
+                <nav class="hero-nav">
+                  <ul>
+                    <li><a href="#">ACTORS</a></li>
+                    <li><a href="#">PRODUCTION</a></li>
+                    <li><a href="#">PHOTOS</a></li>
+                    <li><a href="#">BRANDING</a></li>
+                    <li><a href="#">WEDDINGS</a></li>
+                  </ul>
+                </nav>
+              </section>
+              
+
+
+
+
+
+
+
+<!--         <section class="navigation"> 
+            <nav class="navArea">
                 <ul>
-                <li><a href="#">ACTORS</a></li>
-                <img src="hero_actors.jpg" alt=""> 
-                <li><a href="#">PRODUCTION</a></li>
-                <img src="hero_prod.jpg" alt=""> 
-                <li><a href="#">PHOTOS</a></li>
-                <img src="hero_photos.jpg" alt=""> 
-                <li><a href="#">BRANDING</a></li>
-                <img src="hero_brand.jpg" alt=""> 
-                <li><a href="#">WEDDINGS</a></li>
-                <img src="hero_wedding.jpg" alt=""> 
+                    <li><a href="#">ACTORS</a></li>
+                    <li><a href="#">PRODUCTION</a></li>
+                    <li><a href="#">PHOTOS</a></li>
+                    <li><a href="#">BRANDING</a></li>
+                    <li><a href="#">WEDDINGS</a></li>
                 </ul>
+                <figure class="imgArea"></figure>
             </nav>
-        </section>
+        </section> -->
 
         <article>
             <img src="visionreybuilding.jpg" alt="">
