Nearly finished with the hero image hover effects.

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             <section class="hero">
                 <nav class="hero-nav">
                   <ul>
-                    <li><a href="#">ACTORS</a></li>
-                    <li><a href="#">PRODUCTION</a></li>
-                    <li><a href="#">PHOTOS</a></li>
-                    <li><a href="#">BRANDING</a></li>
-                    <li><a href="#">WEDDINGS</a></li>
+                    <li><a href="#" class="actors">ACTORS</a></li>
+                    <li><a href="#" class="production">PRODUCTION</a></li>
+                    <li><a href="#" class="photos">PHOTOS</a></li>
+                    <li><a href="#" class="branding">BRANDING</a></li>
+                    <li><a href="#" class="weddings">WEDDINGS</a></li>
                   </ul>
                 </nav>
               </section>
