--- a/index.html
+++ b/index.html
@@ -43,27 +43,7 @@
               </section>
               
 
-              
-
-
-
-
-
-<!--         <section class="navigation"> 
-            <nav class="navArea">
-                <ul>
-                    <li><a href="#">ACTORS</a></li>
-                    <li><a href="#">PRODUCTION</a></li>
-                    <li><a href="#">PHOTOS</a></li>
-                    <li><a href="#">BRANDING</a></li>
-                    <li><a href="#">WEDDINGS</a></li>
-                </ul>
-                <figure class="imgArea"></figure>
-            </nav>
-        </section> -->
-
-        <article>
-            <img src="visionreybuilding.jpg" alt="">
+        <article class="about">
             <aside>
                 <p>
                     "Everyone has to start somewhere. 
