I think I hate trying to make images dynamic

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     	<meta charset="utf-8">
     	<meta name="Visonrey" content="When Vision Becomes Reality">
     	<meta name="keywords" content="Allison Reyes, Producer, Photographer, Visonrey.">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
 		<title>Visionrey</title>
 
@@ -44,25 +45,27 @@
               
 
         <article class="about">
-            <aside>
-                <p>
-                    "Everyone has to start somewhere. 
-                    Sometimes you just need a little extra help 
-                    to get you to where you want to go."
-                </p>
-                <h4>
-                    Allison Reyes
-                    VISIONREY Founder
-                </h4>
-            </aside> 
+            <figure class="gradient">
+                <aside>
+                    <p>
+                        "Everyone has to start somewhere. 
+                        Sometimes you just need a little extra help 
+                        to get you to where you want to go."
+                    </p>
+                    <h4>
+                        Allison Reyes
+                        VISIONREY Founder
+                    </h4>
+                </aside> 
 
-            <section>
-                <p>
-                    VISIONREY Entertainment was founded by Allison Reyes in hopes of helping others ignite their careers in entertainment while also making things more affordable for creatives everywhere. Growing up as a mliti-hyphenate in entertainment, Allison realized that the financial struggle is REAL and she hopes to be able to lend a helping hand -- or camera -- to those in need.
-                    Allison is a working actor and producer who has worked on some of the biggest tv shows and films in entertainment, including Netflix's Top Ten series "Hype House", Facebook Watch's "Face to Face With Becky G", and most recently Zack Snyder's feature film "Rebel Moon"!
-                    With a background in dance (ever heard of a little place called Disneyland? Allison used to dance there!), Allison understands the importance of highlighting each individual skill to create perfect actor reels. It is her hope that through VISIONREY Entertainment, we can turn dreams from visions...into REYality.
-                </p>
-            </section>
+                <section>
+                    <p>
+                        VISIONREY Entertainment was founded by Allison Reyes in hopes of helping others ignite their careers in entertainment while also making things more affordable for creatives everywhere. Growing up as a mliti-hyphenate in entertainment, Allison realized that the financial struggle is REAL and she hopes to be able to lend a helping hand -- or camera -- to those in need.
+                        Allison is a working actor and producer who has worked on some of the biggest tv shows and films in entertainment, including Netflix's Top Ten series "Hype House", Facebook Watch's "Face to Face With Becky G", and most recently Zack Snyder's feature film "Rebel Moon"!
+                        With a background in dance (ever heard of a little place called Disneyland? Allison used to dance there!), Allison understands the importance of highlighting each individual skill to create perfect actor reels. It is her hope that through VISIONREY Entertainment, we can turn dreams from visions...into REYality.
+                    </p>
+                </section>
+            </figure>
         </article>
 
         <figure>
