New body images added

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             </figure>
         </article>
 
-        <figure>
-            <img src="companylogos.jpg" alt="">
+        <figure class="logos">
+            
         </figure>
 
         <section>
