--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     	<meta name="keywords" content="Allison Reyes, Producer, Photographer, Visonrey.">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,400;1,700&display=swap" rel="stylesheet">
+
 		<title>Visionrey</title>
 
 		<!-- external CSS link -->
@@ -76,17 +80,17 @@
                 <h2>WHO IS VISIONREY?</h2>
                 <p>
                     VISIONREY is brought to you by industry professionals who have worked on the following tv shows. 
-                    We at VISIONREY believe in helping people get their start in the entertainment industry.
+                    We at VISIONREY believe in helping people get their start in the entertainment industry.<br/>
                     Located in Burbank, California. We are here to help!
                 </p>
             </aside>
         </section>
 
-        <article>
-            <section>
+        <article class="testimony-contact">
+            <section class="testimony">
                 <i class="fa-solid fa-quote-left"></i>
                 <aside>
-                    Allison has a wonderfli personality and is very easy to work with. If you have the opportunity to collaborate creatively with her, don't hesitate - she will be an asset to your team.
+                    Allison has a wonderful personality and is very easy to work with. If you have the opportunity to collaborate creatively with her, don't hesitate - she will be an asset to your team.
                 </aside>
                 <span>
                     Ryan Meinerding
@@ -94,7 +98,7 @@
                 </span>
             </section>
 
-            <section>
+            <section class="contact-text">
                 <h3>Contact us to bring your story to life!</h3>
                 <p>
                     At VISIONREY we offer a range of creative services to help you capture your vision. 
@@ -102,23 +106,23 @@
                 <ul>
                 <li>Stunning reel footage</li> 
                 <li>Professional headshots</li> 
-                <li>Beautifli wedding photography</li> 
+                <li>Beautiful wedding photography</li> 
                 <li>Expert branding and social media services.</li>
                 </ul>
                 <p>
                     We're committed to delivering high-quality reslits with style and professionalism. Contact us today to learn how we can help you bring your story to life!
                 </p>
+    
+                <form action="/" class="contact-form">
+                    <label for="fname">Full Name/label>
+                    <input type="text" id="fname" name="fname"><br><br>
+                    <label for="email">Email</label>
+                    <input type="text" id="email" name="email"><br><br>
+                    <label for="details">Details</label>
+                    <input type="text" id="details" name="details"><br><br>
+                    <input type="submit" value="Submit">
+                </form> 
             </section>
-
-            <form action="/">
-                <label for="fname">Full Name/label>
-                <input type="text" id="fname" name="fname"><br><br>
-                <label for="email">Email</label>
-                <input type="text" id="email" name="email"><br><br>
-                <label for="details">Details</label>
-                <input type="text" id="details" name="details"><br><br>
-                <input type="submit" value="Submit">
-            </form> 
         </article>
         </main>
 
