--- a/index.html
+++ b/index.html
@@ -88,11 +88,10 @@
 
         <article class="testimony-contact">
             <section class="testimony">
-                <i class="fa-solid fa-quote-left"></i>
-                <aside>
+                <aside hidden>
                     Allison has a wonderful personality and is very easy to work with. If you have the opportunity to collaborate creatively with her, don't hesitate - she will be an asset to your team.
                 </aside>
-                <span>
+                <span hidden>
                     Ryan Meinerding
                     Marvel Studios Head of VisDev
                 </span>
@@ -110,20 +109,21 @@
                 <li>Expert branding and social media services.</li>
                 </ul>
                 <p>
-                    We're committed to delivering high-quality reslits with style and professionalism. Contact us today to learn how we can help you bring your story to life!
+                    We're committed to delivering high-quality results with style and professionalism. Contact us today to learn how we can help you bring your story to life!
                 </p>
-    
-                <form action="/" class="contact-form">
-                    <label for="fname">Full Name/label>
-                    <input type="text" id="fname" name="fname"><br><br>
-                    <label for="email">Email</label>
-                    <input type="text" id="email" name="email"><br><br>
-                    <label for="details">Details</label>
-                    <input type="text" id="details" name="details"><br><br>
-                    <input type="submit" value="Submit">
-                </form> 
             </section>
         </article>
+
+        <form action="/" class="contact-form">
+            <label for="fname">Full Name</label>
+            <input type="text" id="fname" name="fname"><br><br>
+            <label for="email">Email</label>
+            <input type="text" id="email" name="email"><br><br>
+            <label for="details">Details</label>
+            <input type="text" id="details" name="details"><br><br>
+            <input type="submit" value="Submit">
+        </form> 
+
         </main>
 
         <script src="https://kit.fontawesome.com/21695ac8bb.js" crossorigin="anonymous"></script>
