--- a/index.html
+++ b/index.html
@@ -115,13 +115,10 @@
         </article>
 
         <form action="/" class="contact-form">
-            <label for="fname">Full Name</label>
-            <input type="text" id="fname" name="fname"><br><br>
-            <label for="email">Email</label>
-            <input type="text" id="email" name="email"><br><br>
-            <label for="details">Details</label>
-            <input type="text" id="details" name="details"><br><br>
-            <input type="submit" value="Submit">
+            <input type="text" id="fname" name="fname" placeholder="  Full Name"><br>
+            <input type="text" id="email" name="email" placeholder="  Email"><br>
+            <input class="detail" type="text" id="details" name="details" placeholder="  Message"><br>
+            <input class="button" type="submit" value="Submit">
         </form> 
 
         </main>
@@ -131,7 +128,7 @@
 
         <footer>
             <section class="social-footer-left">
-                <img src="logo.jpg" alt="Visionrey Logo">
+                <figure></figure>
                 <nav class="social-footer-icons">
                     <ul class="menu simple">
                       <li><a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
@@ -142,27 +139,20 @@
                 </nav>
             </section>
 
-            <form action="/">
-                <span>Join Our Mailing List!</span>
-                <label for="email">Email</label>
-                <input type="text" id="email" name="email"><br><br>
+            <form action="/" class="mailing">
+                <span>Join Our Mailing List!</span><br>
+                <input type="text" id="email" name="email" placeholder="Email">
                 <input type="submit" value="Submit">
             </form> 
 
-        <nav>
+        <nav class="footnav">
             <ul>
+                <li>Home</li>
                 <li>Actors</li>
                 <li>Production</li>
                 <li>Photos</li>
-                <li>Videos</li>
                 <li>Branding</li>
                 <li>Weddings</li>
-                <li>Consultations</li>
-                <li>Interviews</li>
-                <li>Commercials</li>
-                <li>Films</li>
-                <li>Social media</li>
-                <li>Reels</li>
             </ul>
         </nav>
 
