--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <form action="/" class="mailing">
                 <span>Join Our Mailing List!</span><br>
                 <input type="text" id="email" name="email" placeholder="Email">
-                <input type="submit" value="Submit">
+                <input class="button" type="submit" value="Submit">
             </form> 
 
         <nav class="footnav">
