image replacements. grid update.

--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
             <section class="hero">
                 <nav class="hero-nav">
                   <ul>
-                    <li><a href="#" class="actors">ACTORS</a></li>
-                    <li><a href="#" class="production">PRODUCTION</a></li>
-                    <li><a href="#" class="photos">PHOTOS</a></li>
-                    <li><a href="#" class="branding">BRANDING</a></li>
+                    <li><a href="#" class="actors">PHOTOGRAPHY</a></li>
+                    <li><a href="#" class="production">VIDEOGRAPHY</a></li>
+                    <li><a href="#" class="photos">CONSULTATION</a></li>
                     <li><a href="#" class="weddings">WEDDINGS</a></li>
                   </ul>
                 </nav>
@@ -67,6 +66,8 @@
                     </p>
                 </section>
             </figure>
+                <aside class="hero-img">
+                </aside>
         </article>
 
         <figure class="logos">
