home page complete--cheats removed

--- a/index.html
+++ b/index.html
@@ -62,16 +62,19 @@
 
                 <section>
                     <p>
-                        replace with screenshot text
+                        VisionRey is a female owned production company that specializes in films and helping others ignite their careers in entertainment. It was founded by Allison Marie Reyes in December of 2021.
                     </p>
                 </section>
             </figure>
-                <aside class="hero-img">
-                </aside>
+                <aside class="hero-img"></aside>
         </article>
 
-        <figure class="logos">
-            
+        <figure class="logo-row">
+            <figure class="fbwatch"></figure>
+            <figure class="history"></figure>
+            <figure class="netflix"></figure>
+            <figure class="usanet"></figure>
+            <figure class="vh1"></figure>
         </figure>
 
         <section class="posters">
@@ -79,7 +82,7 @@
                 <h2>WHO IS VISIONREY?</h2>
                 <p>
                     VISIONREY is brought to you by industry professionals who have worked on the following tv shows. 
-                    We at VISIONREY believe in helping people get their start in the entertainment industry.<br/>
+                    We at VISIONREY believe in helping people get their start in the entertainment industry.<br/><br>
                     Located in Burbank, California. We are here to help!
                 </p>
             </aside>
@@ -87,17 +90,17 @@
 
         <article class="testimony-contact">
             <section class="testimony">
-                <aside hidden>
+                <i class="fa-solid fa-quote-left fa-bounce" style="color: #ff0000"></i>                
+                <aside>
                     Allison has a wonderful personality and is very easy to work with. If you have the opportunity to collaborate creatively with her, don't hesitate - she will be an asset to your team.
                 </aside>
-                <span hidden>
-                    Ryan Meinerding
-                    Marvel Studios Head of VisDev
-                </span>
+                <hr>
+                <span class="title highlight">Marvel Studios Head of VisDev</span>
+                <span class="name">Ryan Meinerding</span>
             </section>
 
             <section class="contact-text">
-                <h3>Contact us to bring your story to life!</h3>
+                <h3>Let us bring your story to life!</h3>
                 <p>
                     At VISIONREY we offer a range of creative services to help you capture your vision. 
                 </p>
@@ -110,21 +113,23 @@
                 <p>
                     We're committed to delivering high-quality results with style and professionalism. Contact us today to learn how we can help you bring your story to life!
                 </p>
+                <input class="button contact-us-button" type="submit" value="Contact Us!">
             </section>
         </article>
 
-        <form action="/" class="contact-form">
+    <!--    <form action="/" class="contact-form">
             <input type="text" id="fname" name="fname" placeholder="  Full Name"><br>
             <input type="text" id="email" name="email" placeholder="  Email"><br>
             <input class="detail" type="text" id="details" name="details" placeholder="  Message"><br>
             <input class="button" type="submit" value="Submit">
-        </form> 
+        </form>  -->
 
         </main>
 
         <script src="https://kit.fontawesome.com/21695ac8bb.js" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 
+        <hr class="foot-break">
         <footer>
             <section class="social-footer-left">
                 <figure></figure>
