Contact page complete

--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,14 @@
                 </form>
             </section>
 
-        
+            <article class="contact-info">
+                <br>
+                <h6>Hey!<br> Let's chat.</h6>
+                <ul class="fa-ul">
+                    <li><span class="fa-li"><i class="fa-solid fa-square-phone" style="color: #ff0000;""></i></span>  8189999999</li>
+                    <li><span class="fa-li"><i class="fa-solid fa-square-envelope" style="color: #ff0000;"></i></span>  info@visionrey.com</li>                  
+                </ul>
+            </article>
 
 
 
