contact form final touches

--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,11 @@
 <body>
     <header>
             <h1>Visionrey</h1>
+            <a href="index.html">
             <figure class = "logo">
                 <img src="images/logo.webp" alt="Visionrey Logo"> 
             </figure>
+             </a>
         <nav>
             <ul>
             <li><a href="#">ACTORS</a></li>
@@ -47,7 +49,7 @@
             </nav>
           </section>
 
-        <section class="contact-main">
+        <section id="contact-section" class="contact-main">
             <section class="contact-text cont-text-cont-main">
                 <h3>Let us bring your story to life!</h3>
                 <p>
@@ -65,7 +67,7 @@
             </section>
 
             <section class="contact-form">
-                <form action="/">
+                <form action="/" method="POST"> 
                     <label for="fname">Full Name</label><br>
                         <input type="text" id="fname" name="fname" placeholder="  Full Name"><br>
                     <label for="email">Email</label><br>
