--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 	<body>
         <header>
             <h1>Visionrey</h1>
+            <a href="index.html">
             <figure class = "logo">
                 <img src="images/logo.webp" alt="Visionrey Logo"> 
             </figure>
+            </a>
         <nav>
             <ul>
             <li><a href="#">ACTORS</a></li>
@@ -113,7 +115,9 @@
                 <p>
                     We're committed to delivering high-quality results with style and professionalism. Contact us today to learn how we can help you bring your story to life!
                 </p>
+                <a href="contact.html#contact-section">
                 <input class="button contact-us-button" type="submit" value="Contact Us!">
+                </a>
             </section>
         </article>
 
@@ -130,7 +134,7 @@
                     <ul class="menu simple">
                       <li><a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                       <li><a href="https://www.instagram.com/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                      <li><a href="https://www.pinterest.com/"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
+                      <li><a href="https://www.pinterest.com/"><i class="fa fa-linkedin-p" aria-hidden="true"></i></a></li>
                       <li><a href="https://twitter.com/?lang=en"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                     </ul>
                 </nav>
