--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
             <section class="hero">
                 <nav class="hero-nav">
                   <ul>
-                    <li><a href="#" class="actors">PHOTOGRAPHY</a></li>
-                    <li><a href="#" class="production">VIDEOGRAPHY</a></li>
-                    <li><a href="#" class="photos">CONSULTATION</a></li>
-                    <li><a href="#" class="weddings">WEDDINGS</a></li>
+                    <li><a href="photo.html#gallery" class="actors">PHOTOGRAPHY</a></li>
+                    <li><a href="video.html" class="production">VIDEOGRAPHY</a></li>
+                    <li><a href="consult.html" class="photos">CONSULTATION</a></li>
+                    <li><a href="wedding.html" class="weddings">WEDDINGS</a></li>
                   </ul>
                 </nav>
               </section>
@@ -134,7 +134,7 @@
                     <ul class="menu simple">
                       <li><a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                       <li><a href="https://www.instagram.com/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                      <li><a href="https://www.pinterest.com/"><i class="fa fa-linkedin-p" aria-hidden="true"></i></a></li>
+                      <li><a href="https://www.pinterest.com/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                       <li><a href="https://twitter.com/?lang=en"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                     </ul>
                 </nav>
