videography page complete

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 <nav class="hero-nav">
                   <ul>
                     <li><a href="photo.html#gallery" class="actors">PHOTOGRAPHY</a></li>
-                    <li><a href="video.html" class="production">VIDEOGRAPHY</a></li>
-                    <li><a href="consult.html" class="photos">CONSULTATION</a></li>
-                    <li><a href="wedding.html" class="weddings">WEDDINGS</a></li>
+                    <li><a href="video.html#video" class="production">VIDEOGRAPHY</a></li>
+                    <li><a href="consult.html#consult" class="photos">CONSULTATION</a></li>
+                    <li><a href="wedding.html#wedding" class="weddings">WEDDINGS</a></li>
                   </ul>
                 </nav>
               </section>
@@ -92,7 +92,7 @@
 
         <article class="testimony-contact">
             <section class="testimony">
-                <i class="fa-solid fa-quote-left fa-bounce" style="color: #ff0000"></i>                
+                <i class="fa-solid fa-quote-left fa-bounce" style="color: crimson"></i>                
                 <aside>
                     Allison has a wonderful personality and is very easy to work with. If you have the opportunity to collaborate creatively with her, don't hesitate - she will be an asset to your team.
                 </aside>
