--- a/photo.html
+++ b/photo.html
@@ -41,10 +41,10 @@
         <section class="hero">
             <nav class="hero-nav">
               <ul>
-                <li><a href="photo.html" class="actors">PHOTOGRAPHY</a></li>
-                <li><a href="video.html" class="production">VIDEOGRAPHY</a></li>
-                <li><a href="consult.html" class="photos">CONSULTATION</a></li>
-                <li><a href="wedding.html" class="weddings">WEDDINGS</a></li>
+                <li><a href="photo.html#gallery" class="actors">PHOTOGRAPHY</a></li>
+                <li><a href="video.html#video" class="production">VIDEOGRAPHY</a></li>
+                <li><a href="consult.html#consult" class="photos">CONSULTATION</a></li>
+                <li><a href="wedding.html#wedding" class="weddings">WEDDINGS</a></li>
               </ul>
             </nav>
           </section>
@@ -147,6 +147,10 @@
 
 </article>
 
+
+    <a href="contact.html#contact-section">
+    <input class="button contact-us-button" type="submit" value="Contact Us!">
+    </a>
 
         </section>
 
