Testing commit changes for github pages

--- a/contact.html
+++ b/contact.html
@@ -146,12 +146,11 @@
 
         <nav class="footnav">
             <ul>
-                <li>Home</li>
-                <li>Actors</li>
-                <li>Production</li>
-                <li>Photos</li>
-                <li>Branding</li>
-                <li>Weddings</li>
+                <a href="index.html"><li>Home</li></a>
+                <a href="photo.html#gallery"><li>Photography</li>
+                <a href="video.html#video"><li>Videography</li>
+                <a href="consult.html#consult"><li>Consultation</li>
+                <a href="wedding.html#wedding"><li>Weddings</li>
             </ul>
         </nav>
     </footer>
