--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                 <section>
                     <p>
-                        VisionRey is a female owned production company that specializes in films and helping others ignite their careers in entertainment. It was founded by Allison Marie Reyes in December of 2021.
+                        
                     </p>
                 </section>
             </figure>
@@ -83,8 +83,11 @@
             <aside class="poster-container">
                 <h2>WHO IS VISIONREY?</h2>
                 <p>
-                    VISIONREY is brought to you by industry professionals who have worked on the following tv shows. 
-                    We at VISIONREY believe in helping people get their start in the entertainment industry.<br/><br>
+                    VisionRey is brought to you by industry professionals who have worked on the following tv shows. 
+                    We at VisionRey believe in helping people get their start in the entertainment industry.</p><br>
+                    <p>VisionRey is a female owned production company that specializes in films and helping others ignite their careers in entertainment. It was founded by Allison Marie Reyes in December of 2021.</p><br>
+                    
+                <p>
                     Located in Burbank, California. We are here to help!
                 </p>
             </aside>
