--- a/photo.html
+++ b/photo.html
@@ -49,8 +49,9 @@
             </nav>
           </section>
 
+
         <section id="photo-main">
-<!--             <article class="headshots">
+            <article class="headshots">
                 <h3>HEADSHOTS</h3>
                 <span>A short description/sales copy. Something more specific than this. Could also, honestly, have nothing at all other than the heading.</span>
 
@@ -76,7 +77,6 @@
 
             </article>
 -->
-
 
 <input type="radio" name="Photos" id="check1" checked>
 <input type="radio" name="Photos" id="check2">
@@ -181,12 +181,11 @@
 
         <nav class="footnav">
             <ul>
-                <li>Home</li>
-                <li>Actors</li>
-                <li>Production</li>
-                <li>Photos</li>
-                <li>Branding</li>
-                <li>Weddings</li>
+                <a href="index.html"><li>Home</li></a>
+                <a href="photo.html#gallery"><li>Photography</li>
+                <a href="video.html#video"><li>Videography</li>
+                <a href="consult.html#consult"><li>Consultation</li>
+                <a href="wedding.html#wedding"><li>Weddings</li>
             </ul>
         </nav>
     </footer>
