--- a/wedding.html
+++ b/wedding.html
@@ -52,7 +52,7 @@
           
 
         <section class="wedding-header" id="wedding">
-            <h1>Classic & Enduring</h1>
+            <h1>Happily Ever After!</h1>
             <hr>
             <h2>Wedding Photography and Video</h2>
         </section>
