minor link styling changes

--- a/index.html
+++ b/index.html
@@ -59,17 +59,18 @@
                     <h4>
                         Allison Reyes<br/>
                         VISIONREY Founder
-                    </h4>
+                    </h4>        
+
+
                 </aside> 
 
-                <section>
-                    <p>
-                        
-                    </p>
-                </section>
+                <button type="button" class="learn-more-button">
+                   <a href="learn.html#learn">Meet Allison >></a>
+                </button>
             </figure>
                 <aside class="hero-img"></aside>
         </article>
+
 
         <figure class="logo-row">
             <figure class="fbwatch"></figure>
@@ -86,7 +87,6 @@
                     VisionRey is brought to you by industry professionals who have worked on the following tv shows. 
                     We at VisionRey believe in helping people get their start in the entertainment industry.</p><br>
                     <p>VisionRey is a female owned production company that specializes in films and helping others ignite their careers in entertainment. It was founded by Allison Marie Reyes in December of 2021.</p><br>
-                    
                 <p>
                     Located in Burbank, California. We are here to help!
                 </p>
